--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@mikazuki/avatars.mochizuki.moe",
+  "name": "@mikazuki/docs.mochizuki.moe",
   "version": "0.1.0",
-  "description": "https://avatars.mochizuki.moe repository",
+  "description": "https://docs.mochizuki.moe repository",
   "main": "public/index.html",
-  "repository": "https://github.com/mika-f/avatars.mochizuki.moe.git",
+  "repository": "https://github.com/mika-f/docs.mochizuki.moe.git",
   "author": "Fuyuno Mikazuki, Natsuneko",
   "license": "MIT",
   "private": true,
