--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "start": "serve ./public/"
   },
   "devDependencies": {
+    "@types/node": "^14.0.27",
+    "@types/vue-router": "^2.0.0",
     "prettier": "^2.0.5",
-    "serve": "^11.3.0"
+    "serve": "^11.3.2",
+    "typescript": "^3.9.7",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3"
+  },
+  "dependencies": {
+    "remove": "^0.1.5"
   }
 }
