--- a/package.json
+++ b/package.json
@@ -19,7 +19,5 @@
     "vue": "^2.6.11",
     "vue-router": "^3.4.3"
   },
-  "dependencies": {
-    "remove": "^0.1.5"
-  }
+  "dependencies": {}
 }
