--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "license": "CC-BY-4.0",
   "private": true,
   "scripts": {
-    "start": "serve ./public/"
+    "start": "docsify serve ./public"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/vue-router": "^2.0.0",
+    "docsify-cli": "^4.4.1",
     "prettier": "^2.0.5",
-    "serve": "^11.3.2",
     "typescript": "^3.9.7",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3"
