feat: add Atlasization

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,7 +8,7 @@ http {
     server_name localhost;
 
     location / {
-      rewrite           ^/(.+?)/(.+?)/.* /$1/$2/index.html break;
+      rewrite           ^/(.+?)/.* /$1/index.html break;
       proxy_pass        http://host.docker.internal:3000;
       proxy_redirect    off;
       proxy_set_header  Host $host;
