--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,7 +77,9 @@ markdown_extensions:
 # MkDocs Plugins
 plugins:
   - git-revision-date-localized:
-      type: date
+      type: datetime
+      timezone: Asia/Tokyo
+      locale: ja
       fallback_to_build_date: true
   - redirects:
       redirect_maps:
