--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,9 @@ copyright: Copyright &copy 2020-2021 Natsuneko (Natsuneko Laboratory)
 # Extra Resources
 extra_css:
   - assets/css/figure.css
+extra_javascript:
+  - https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js
+  - assets/js/medium-zoom.js
 
 # Header Navigation
 nav:
