--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,17 +133,17 @@ plugins:
         AssetMerger/Guide/Installation.md: asset-merger/guides/getting-started.md
         AssetMerger/Guide/HowToUse.md: asset-merger/guides/how-to-use.md
         AssetMerger/Guide/TestedTools.md: asset-merger/guides/tested-tools.md
-        AssetMerger/Advanced/AnimatorController: asset-merger/index.md # TODO: Provide Advanced Pages
+        AssetMerger/Advanced/AnimatorController.md: asset-merger/index.md # TODO: Provide Advanced Pages
         AssetMerger/Contact.md: asset-merger/terms.md
         AssetMerger/Changelog.md: asset-merger/changelog.md
-        FukidashiSystem/Guide/Installation: fukidashi-system/guides/getting-started.md
-        FukidashiSystem/Guide/HowToUse: fukidashi-system/guides/how-to-use.md
+        FukidashiSystem/Guide/Installation.md: fukidashi-system/guides/getting-started.md
+        FukidashiSystem/Guide/HowToUse.md: fukidashi-system/guides/how-to-use.md
         FukidashiSystem/Guide/Modification.md: fukidashi-system/guides/customize.md
         FukidashiSystem/Contact.md: fukidashi-system/terms.md
         FukidashiSystem/Changelog.md: fukidashi-system/changelog.md
         SDK2CompatView/index.md: sdk2-compat-view/index.md
-        SDK2CompatView/Guide/Installation: sdk2-compat-view/guides/getting-started.md
-        SDK2CompatView/Guide/HowToUse: sdk2-compat-view/guides/how-to-use.md
+        SDK2CompatView/Guide/Installation.md: sdk2-compat-view/guides/getting-started.md
+        SDK2CompatView/Guide/HowToUse.md: sdk2-compat-view/guides/how-to-use.md
         UdonRabbit/index.md: udon-rabbit/index.md
         UdonRabbit/Guide/Installation.md: udon-rabbit/guides/getting-started.md
         UdonRabbit/Guide/FeatureRequest.md: udon-rabbit/terms.md
