--- a/package.json
+++ b/package.json
@@ -12,12 +12,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
-    "@types/vue-router": "^2.0.0",
-    "docsify-cli": "^4.4.1",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.7",
-    "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "typescript": "^3.9.7"
   },
   "dependencies": {}
 }
