--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project Information
 site_name: docs.mochizuki.moe
-site_url: https://docs.mochizuki.moe
+site_url: https://docs.mochizuki.moe/
 site_author: Natsuneko
 
 # Preview Controls
