--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,10 +178,10 @@ nav:
       その他:
         利用規約: udon-rabbit/terms.md
         更新履歴: udon-rabbit/changelog.md
-  - ダウンロード: downloads/index.md
-  - お知らせ:
+  - Archives: downloads/index.md
+  - Announcements:
       2021/04/22: announcement/20210422-stop-distribution-of-all-products-in-natsuneko-laboratory.md
-  - お問い合わせ: contact.md
+  - Contact: contact.md
 
 # Theme Configuration
 theme:
